<!--
Copyright 2015 Everton Luiz de Resende Lucas

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<resources>
    <string name="app_name">Pass Shelter</string>
    <string name="app_name1">Pass</string>
    <string name="app_name2">Shelter</string>

    <string name="backup">Salvar chave</string>
    <string name="restore">Recuperar chave</string>
    <string name="digital_certificate">Certificado Digital</string>
    <string name="txt_btn_dig_cert">Instalar</string>
    <string name="backup_message">Confirma o backup da chave de acesso?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="empty_key">Os dados criptográficos não foram criados</string>
    <string name="export_key_success">Arquivo data.crypto salvo com sucesso em Downloads</string>
    <string name="export_key_exception">Exceção ao salvar arquivo data.crypto\"\\n\\r\"</string>
    <string name="export">Exportar chave</string>
    <string name="export_message">Confirma a exportação da chave de acesso?</string>
    <string name="import_key_exception">Exceção ao ler arquivo data.crypto\\\"\\\\n\\\\r\\\"</string>
    <string name="import_key">Importar chave</string>
    <string name="import_message">Confirma a importação da chave de acesso?</string>
    <string name="file_not_found">Arquivo de chave de acesso não encontrado</string>

    <string name="text_dig_cert">Bem vindo ao software de compartilhamento de senhas Pass Shelter. Ele permitirá que você envie senhas aos seus amigos de forma segura.</string>
    <string name="text_dig_cert_install">O certificado digital ainda não foi instalado. Pressione o botão \"Instalar\" para instalar o certificado e inicializar as informações de segurança.</string>

    <string name="text_def_user">Informe aqui seu email e uma senha que serão usados para compartilhar senhas posteriormente.</string>
    <string name="text_login">Informe aqui a senha para acessar o sistema.</string>
    <string name="txt_create_user">Salvar</string>

    <string name="button_yes">Sim</string>
    <string name="button_no">Não</string>

    <string name="txt_btn_login">Login</string>
    <string name="txt_btn_cancel">Cancelar</string>
    <string name="lbl_resource">Recurso:</string>
    <string name="refresh">Verificar recursos</string>
    <string name="lbl_user">Usuário</string>
    <string name="lbl_password">Senha</string>
    <string name="delete_resource">Excluir recurso</string>
    <string name="delete_confirmation">Confirma a exclusão do Recurso?</string>

    <string name="lbl_send_resource_title">Envio de recursos</string>
    <string name="lbl_destination_email">Email do Destinatário</string>
    <string name="txt_search_email">Buscar</string>
    <string name="send_resource">Enviar recurso</string>
    <string name="wait_emails">Pesquisando emails informados</string>

    <string name="title_activity_resource">Recurso</string>
    <string name="title_activity_send_resource">Enviar recurso</string>
    <string name="title_activity_main">Recursos</string>
    <string name="title_activity_group">Grupo</string>
    <string name="title_activity_groups">Grupos</string>
    <string name="title_activity_activity_new_group">Novo Grupo</string>
    <string name="title_activity_users_new_group">Usuários</string>
    <string name="title_activity_users_group">Usuários</string>
    <string name="title_activity_send_resource_group">Envio para grupo</string>
    <string name="title_activity_update">Atualização</string>

    <string name="txt_send_resource">Enviar recurso</string>
    <string name="process_send_resource">Enviando recurso</string>
    <string name="process_verify_resources">Verificando novos recursos</string>
    <string name="generate_key">Gerar nova chave</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_resource">Adicionar recursos</string>
    <string name="add_group">Novo grupo</string>
    <string name="lbl_name_group">Nome do Grupo</string>
    <string name="lbl_next_step_new_group">Avançar</string>
    <string name="name_new_group_blank">Nome do grupo não pode ficar em branco</string>
    <string name="name_new_group_found">Grupo já existe</string>
    <string name="lbl_users_group">Usuários</string>
    <string name="confirmation_new_user">Confirmar inserção</string>
    <string name="confirmation_new_user_message">Confirma a inclusão do novo usuário</string>
    <string name="create_group">Criar</string>
    <string name="save_group_not_allowed">Grupo não pode ser salvo</string>
    <string name="saving_group">Aguarde enquanto o grupo é salvo</string>
    <string name="lbl_admin_group">Administrador</string>
    <string name="lbl_action_edit_users_group">Alterar</string>
    <string name="lbl_action_save_group">Salvar grupo</string>
    <string name="finish_users_group_edition">Alterar</string>
    <string name="lbl_action_delete_group">Excluir grupo</string>
    <string name="delete_group_confirmation">Confirma a exclusão do grupo?</string>
    <string name="send_resource_to_group">Enviar para grupo</string>
    <string name="msg_no_connection">Sem conexão</string>
    <string name="text_update">Aguarde enquanto o Pass Shelter é atualizado.</string>
</resources>
