<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.unisinos.evertonlucas.passshelter.app.GroupActivity">

    <item
        android:id="@+id/action_edit_users_group"
        android:icon="@drawable/ic_group_white"
        android:orderInCategory="100"
        android:title="@string/lbl_action_edit_users_group"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_save_group"
        android:icon="@drawable/ic_done_white"
        android:orderInCategory="200"
        android:title="@string/lbl_action_save_group"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete_group"
        android:icon="@drawable/ic_done_white"
        android:orderInCategory="300"
        android:title="@string/lbl_action_delete_group"
        app:showAsAction="never" />

</menu>
