<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_dig_cert"
        android:textSize="@dimen/font_size_dig_cert"
        android:layout_marginLeft="@dimen/horizontal_app_margin"
        android:layout_marginTop="@dimen/top_app_name_margin"
        android:layout_marginBottom="@dimen/bottom_text_app_name_margin"
        android:layout_marginRight="@dimen/horizontal_app_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_dig_cert_install"
        android:textSize="@dimen/font_size_dig_cert"
        android:layout_marginLeft="@dimen/horizontal_app_margin"
        android:layout_marginBottom="@dimen/bottom_text_app_name_margin"
        android:layout_marginRight="@dimen/horizontal_app_margin"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnCancel"
            android:text="@string/txt_btn_cancel"
            android:layout_gravity="right"
            android:layout_marginLeft="@dimen/horizontal_app_margin" />

        <Button
            android:id="@+id/btnInstDigCert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="btnInstallCertificate"
            android:text="@string/txt_btn_dig_cert"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/horizontal_app_margin" />
    </GridLayout>

</LinearLayout>
